# finance-ai-server

./: .gitignore  8-AGENTS-COMPLETE.md  AGENTS-IMPLEMENTATION.md  COMPLETE-BUILD-SUMMARY.md  DEMO_MODE_QUICKSTART.md  DEPLOYMENT-GUIDE.md  DEPLOY_TO_RAILWAY.md  DOCKER_SETUP.md  Dockerfile  FIX-AND-START.ps1  GOOGLE_SHEETS_SETUP.md  INTEGRATION_AND_HOSTING.md  PRODUCTION-LAUNCH.md  PROJECT_SUMMARY.md  QUICK_FIX.md  README.md  SERVER-SETUP-COMPLETE.txt  SETUP_GUIDE.md  SHEETS_INTEGRATION.md  WINDOWS_QUICK_START.md  YOUR_ACTION_PLAN.md  dashboard.html  docker-compose.yml  railway.json  start-server.bat  start-server.ps1  verify_setup.py
app/: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  pyproject.toml  railway.json
app/alembic/versions/: 001_initial_schema.py  002_add_company_settings.py
app/scripts/: seed_demo_data.py
app/src/agents/budget_monitoring_agent/: __init__.py  graph.py
app/src/agents/dashboard_orchestration_agent/: __init__.py  graph.py
app/src/agents/email_distribution_agent/: __init__.py  graph.py
app/src/agents/expense_collection_agent/: __init__.py  graph.py
app/src/agents/finance_copilot_agent/: __init__.py  graph.py
app/src/agents/forecasting_agent/: __init__.py  graph.py
app/src/agents/marketing_spend_agent/: __init__.py  graph.py
app/src/agents/monthly_report_agent/: __init__.py  graph.py
app/src/api/: deps.py
app/src/api/v1/: router.py
app/src/core/config/: cors.py  settings.py
app/src/infrastructure/: demo_data.py
app/src/schemas/: budgets.py  common.py  dashboard.py  marketing.py
frontend/: .env.example  (+9 more)
(+145 files in other folders)
