[project]
name = "finance-ai-agent-api"
version = "0.1.0"
description = "Finance AI Agent - Backend API (FastAPI, Clean Architecture, multi-agent orchestration)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "pyjwt[crypto]>=2.9.0",
    "langgraph>=0.2.34",
    "langchain-core>=0.3.9",
    "openai>=1.51.0",
    "anthropic>=0.36.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "clerk-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
